# agent_evolve

./: README.md  pyproject.toml
examples/knapsack/: problem_def.py
examples/knapsack_dag/: problem_def.py  run.py
src/agent_evolve/: __init__.py  _support.py  evolve.kedi  loop.py  optimizer.py  problem.py  results.py
tests/: test_knapsack_dag.py  test_loop.py  test_results.py  test_support.py
