[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_evolve"
version = "0.1.0"
description = "LLM-driven multi-objective optimization via Pareto-guided evolution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "kedi @ file:./kedi",
    "pydantic>=2",
]

[project.optional-dependencies]
dspy = ["dspy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_evolve = ["*.kedi"]
